refactor  for testing